--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/static/favicon.ico" />
       <meta property="og:title" content="TopThree" />
-    <meta property="og:image" content="/static/topthreepic.png" />
+    <meta property="og:image" content="topthreepic.png" />
     <meta property="og:description" content="List sharing and creation platform" />
     <meta property="og:url" content="https://top-three.herokuapp.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
