--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/static/favicon.ico" />
-      <meta property="og:title" content="TopThree" />
-    <meta property="og:image" content="topthreepic.png" />
+    <meta property="og:title" content="TopThree" />
+    <meta property="og:image" content="./static/topthreepic.png" />
     <meta property="og:description" content="List sharing and creation platform" />
     <meta property="og:url" content="https://top-three.herokuapp.com" />
+    <meta charset="utf-8" />
+    <link rel="icon" href="/static/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="/static/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
